Advent 2024: preparing to move back into main.